minor style fixes, add scrollbar styles

--- a/frontend/components/drawer/styles.module.scss
+++ b/frontend/components/drawer/styles.module.scss
@@ -2,33 +2,34 @@
 @import '../../public/css/quantities.scss';
 
 .drawer {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100vh;
-  width: 160px;
-  background-color: $green-400;
-  z-index: 1;
-  box-shadow: 2px 0px 10px $violet-500;
-  
-  @media (min-width: $bp-medium) {
-    width: 190px;
-  }
+	position: absolute;
+	left: 0;
+	top: 0;
+	min-height: 100vh;
+	height: 100%;
+	width: 160px;
+	background-color: $green-400;
+	z-index: 1;
+	box-shadow: 2px 0px 10px $violet-500;
 
-  @media (min-width: $bp-large) {
-    width: 240px;
-  }
+	@media (min-width: $bp-medium) {
+		width: 190px;
+	}
+
+	@media (min-width: $bp-large) {
+		width: 240px;
+	}
 }
 
 .drawerVisible {
-  visibility: visible;
-  transform: translateX(0);
-  transition: all 0.5s ease-in-out;
+	visibility: visible;
+	transform: translateY(0);
+	transition: all 0.5s ease-in-out;
 }
 
 .drawerHidden {
-  visibility: hidden;
-  transform: translateX(-500px);
-  transition: all 0.5s ease-in-out;
-  opacity: 0;
+	visibility: hidden;
+	transform: translateY(-500px);
+	transition: all 0.5s ease-in-out;
+	opacity: 0;
 }
