--- a/frontend/components/layout/styles.module.scss
+++ b/frontend/components/layout/styles.module.scss
@@ -1,28 +1,26 @@
 @import '../../public/css/quantities.scss';
 
 .mainWrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  max-width: 1440px;
-  margin: 0 auto;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	max-width: 1440px;
+	margin: 0 auto;
 
-  .drawerVisible {
-    display: flex;
-    transition-duration: 0.5s;
-    
-    @media (min-width: $bp-medium) {
-      margin-left: 190px;
-    }
-  
-    @media (min-width: $bp-large) {
-      margin-left: 240px;
-    }
-  }
-  
-  .drawerHidden {
-    display: flex;
-    margin-left: 0;
-    transition-duration: 0.9s;
-  }
+	.drawerVisible {
+		transition-duration: 0.5s;
+
+		@media (min-width: $bp-medium) {
+			margin-left: 190px;
+		}
+
+		@media (min-width: $bp-large) {
+			margin-left: 240px;
+		}
+	}
+
+	.drawerHidden {
+		margin-left: 0;
+		transition-duration: 0.9s;
+	}
 }
